Added transition to the animation

--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
           <h2>Card tricks and other things. So help me.</h2>
         </header>
       </article>
+
+      <article class="card">
+        <header class="card-header">
+          <p>May 25th 2020</p>
+          <h2>Card tricks and other things. So help me.</h2>
+        </header>
+      </article>
+
+      <article class="card">
+        <header class="card-header">
+          <p>May 25th 2020</p>
+          <h2>Card tricks and other things. So help me.</h2>
+        </header>
+      </article>
     </section>
   </body>
 </html>
