--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
           <p>May 25th 2020</p>
           <h2>Card tricks and other things. So help me.</h2>
         </header>
+
+        <div class="card-author">
+          <a href="#" class="author-avatar">
+            <img src="avatar.jpeg" alt="Author avatar" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Author</div>
+            Jane Doe
+          </div>
+        </div>
       </article>
 
       <article class="card">
@@ -20,6 +34,20 @@
           <p>May 25th 2020</p>
           <h2>Card tricks and other things. So help me.</h2>
         </header>
+
+        <div class="card-author">
+          <a href="#" class="author-avatar">
+            <img src="avatar.jpeg" alt="Author avatar" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Author</div>
+            Jane Doe
+          </div>
+        </div>
       </article>
 
       <article class="card">
@@ -27,6 +55,20 @@
           <p>May 25th 2020</p>
           <h2>Card tricks and other things. So help me.</h2>
         </header>
+
+        <div class="card-author">
+          <a href="#" class="author-avatar">
+            <img src="avatar.jpeg" alt="Author avatar" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Author</div>
+            Jane Doe
+          </div>
+        </div>
       </article>
 
       <article class="card">
@@ -34,6 +76,20 @@
           <p>May 25th 2020</p>
           <h2>Card tricks and other things. So help me.</h2>
         </header>
+
+        <div class="card-author">
+          <a href="#" class="author-avatar">
+            <img src="avatar.jpeg" alt="Author avatar" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Author</div>
+            Jane Doe
+          </div>
+        </div>
       </article>
 
       <article class="card">
@@ -41,6 +97,20 @@
           <p>May 25th 2020</p>
           <h2>Card tricks and other things. So help me.</h2>
         </header>
+
+        <div class="card-author">
+          <a href="#" class="author-avatar">
+            <img src="avatar.jpeg" alt="Author avatar" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Author</div>
+            Jane Doe
+          </div>
+        </div>
       </article>
     </section>
   </body>
