Added pictures and changed birthday tags

--- a/index.html
+++ b/index.html
@@ -3,28 +3,73 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CSS card trick</title>
+    <title>The WordPlace Church Leaders</title>
     <link rel="stylesheet" href="card.css" />
   </head>
   <body>
+    <a href="#" class="church-logo">
+        <img src="church-logo.jpg" alt="Church logo" />
+      </a>
     <section class="card-list">
       <article class="card">
         <header class="card-header">
-          <p>May 25th 2020</p>
-          <h2>Card tricks and other things. So help me.</h2>
+          <p>Oct 23rd</p>
+          <h2>The WordPlace Church</h2>
         </header>
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="avatar.jpeg" alt="Author avatar" />
+            <img src="pastor.jpg" alt="Pastor's avatar" />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
           </svg>
 
           <div class="author-name">
-            <div class="author-name-prefix">Author</div>
-            Jane Doe
+            <div class="author-name-prefix">Pastor</div>
+            Matthew Olaniyi
+          </div>
+        </div>
+      </article>
+
+      <article class="card">
+        <header class="card-header">
+          <p>Sept 1st</p>
+          <h2>The WordPlace Church</h2>
+        </header>
+
+        <div class="card-author">
+          <a href="#" class="author-avatar">
+            <img src="church-logo.jpg" alt="Author avatar" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Sister</div>
+            Tolu David-Oladejo
+          </div>
+        </div>
+      </article>
+
+      <article class="card">
+        <header class="card-header">
+          <p>Feb 27th</p>
+          <h2>The WordPlace Church</h2>
+        </header>
+
+        <div class="card-author">
+          <a href="#" class="author-avatar">
+            <img src="bro-michael.jpg" alt="Author avatar" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Brother</div>
+            Michael Oladipo
           </div>
         </div>
       </article>
@@ -32,20 +77,20 @@
       <article class="card">
         <header class="card-header">
           <p>May 25th 2020</p>
-          <h2>Card tricks and other things. So help me.</h2>
+          <h2>The WordPlace Church</h2>
         </header>
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="avatar.jpeg" alt="Author avatar" />
+            <img src="bro-salem.jpg" alt="Author avatar" />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
           </svg>
 
           <div class="author-name">
-            <div class="author-name-prefix">Author</div>
-            Jane Doe
+            <div class="author-name-prefix">Brother</div>
+            Salem Daniel
           </div>
         </div>
       </article>
@@ -53,20 +98,20 @@
       <article class="card">
         <header class="card-header">
           <p>May 25th 2020</p>
-          <h2>Card tricks and other things. So help me.</h2>
+          <h2>The WordPlace Church</h2>
         </header>
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="avatar.jpeg" alt="Author avatar" />
+            <img src="church-logo.jpg" alt="Author avatar" />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
           </svg>
 
           <div class="author-name">
-            <div class="author-name-prefix">Author</div>
-            Jane Doe
+            <div class="author-name-prefix">Brother</div>
+            Dami Ayodele
           </div>
         </div>
       </article>
@@ -74,20 +119,20 @@
       <article class="card">
         <header class="card-header">
           <p>May 25th 2020</p>
-          <h2>Card tricks and other things. So help me.</h2>
+          <h2>The WordPlace Church</h2>
         </header>
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="avatar.jpeg" alt="Author avatar" />
+            <img src="sis-ruth.jpg" alt="Author avatar" />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
           </svg>
 
           <div class="author-name">
-            <div class="author-name-prefix">Author</div>
-            Jane Doe
+            <div class="author-name-prefix">Sister</div>
+            Ruth Johnson
           </div>
         </div>
       </article>
@@ -95,23 +140,66 @@
       <article class="card">
         <header class="card-header">
           <p>May 25th 2020</p>
-          <h2>Card tricks and other things. So help me.</h2>
+          <h2>The WordPlace Church</h2>
         </header>
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="avatar.jpeg" alt="Author avatar" />
+            <img src="bro-deolu.jpg" alt="Author avatar" />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
           </svg>
 
           <div class="author-name">
-            <div class="author-name-prefix">Author</div>
-            Jane Doe
+            <div class="author-name-prefix">Brother</div>
+            Adeolu Alamu
+          </div>
+        </div>
+      </article>
+
+      <article class="card">
+        <header class="card-header">
+          <p>April 11th</p>
+          <h2>The WordPlace Church</h2>
+        </header>
+
+        <div class="card-author">
+          <a href="#" class="author-avatar">
+            <img src="sis-ope.jpeg" alt="Author avatar" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Sister</div>
+            Ope Olakanye
+          </div>
+        </div>
+      </article>
+
+      <article class="card">
+        <header class="card-header">
+          <p>May 25th</p>
+          <h2>The WordPlace Church</h2>
+        </header>
+
+        <div class="card-author">
+          <a href="#" class="author-avatar">
+            <img src="fola.png" alt="Author avatar" />
+          </a>
+          <svg class="half-circle" viewBox="0 0 106 57">
+            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
+          </svg>
+
+          <div class="author-name">
+            <div class="author-name-prefix">Brother</div>
+            Folafunmi Mustapha
           </div>
         </div>
       </article>
     </section>
+    <footer>The WordPlace Church &reg;</footer>
   </body>
 </html>
