Reorganized folder structure to contain assets

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <a href="#" class="church-logo">
-        <img src="church-logo.jpg" alt="Church logo" />
-      </a>
+      <img src="./assets/church-logo.jpg" alt="Church logo" />
+    </a>
     <section class="card-list">
       <article class="card">
         <header class="card-header">
@@ -19,7 +19,7 @@
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="pastor.jpg" alt="Pastor's avatar" />
+            <img src="./assets/pastor.jpg" alt="Pastor's avatar" />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
@@ -40,7 +40,7 @@
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="church-logo.jpg" alt="Author avatar" />
+            <img src="./assets/church-logo.jpg" alt="Author avatar" />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
@@ -61,7 +61,7 @@
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="bro-michael.jpg" alt="Author avatar" />
+            <img src="./assets/bro-michael.jpg" alt="Author avatar" />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
@@ -82,7 +82,7 @@
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="bro-salem.jpg" alt="Author avatar" />
+            <img src="./assets/bro-salem.jpg" alt="Author avatar" />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
@@ -103,7 +103,7 @@
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="church-logo.jpg" alt="Author avatar" />
+            <img src="./assets/church-logo.jpg" alt="Author avatar" />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
@@ -124,7 +124,7 @@
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="sis-ruth.jpg" alt="Author avatar" />
+            <img src="./assets/sis-ruth.jpg" alt="Author avatar" />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
@@ -145,7 +145,7 @@
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="bro-deolu.jpg" alt="Author avatar" />
+            <img src="./assets/bro-deolu.jpg" alt="Author avatar" />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
@@ -166,7 +166,7 @@
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="sis-ope.jpeg" alt="Author avatar" />
+            <img src="./assets/sis-ope.jpeg" alt="Author avatar" />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
@@ -187,7 +187,7 @@
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="fola.png" alt="Author avatar" />
+            <img src="./assets/fola.png" alt="Author avatar" />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
