Changed image references to cloudinary links

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The WordPlace Church Leaders</title>
     <link rel="stylesheet" href="card.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://res.cloudinary.com/folafunmi/image/upload/v1601374913/Church%20faces/favicon_at6elu.png"
+    />
   </head>
   <body>
     <a href="#" class="church-logo">
@@ -19,7 +24,10 @@
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="./assets/pastor.jpg" alt="Pastor's avatar" />
+            <img
+              src="https://res.cloudinary.com/folafunmi/image/upload/v1601374905/Church%20faces/pastor_ol1lmh.jpg"
+              alt="Pastor's avatar"
+            />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
@@ -40,7 +48,10 @@
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="./assets/church-logo.jpg" alt="Author avatar" />
+            <img
+              src="https://res.cloudinary.com/folafunmi/image/upload/v1601374890/Church%20faces/church-logo_bgtfdu.jpg"
+              alt="Author avatar"
+            />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
@@ -61,7 +72,10 @@
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="./assets/bro-michael.jpg" alt="Author avatar" />
+            <img
+              src="https://res.cloudinary.com/folafunmi/image/upload/v1601374921/Church%20faces/bro-michael_fdbnvv.jpg"
+              alt="Author avatar"
+            />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
@@ -82,7 +96,10 @@
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="./assets/bro-salem.jpg" alt="Author avatar" />
+            <img
+              src="https://res.cloudinary.com/folafunmi/image/upload/v1601374897/Church%20faces/bro-salem_ubcgob.jpg"
+              alt="Author avatar"
+            />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
@@ -103,7 +120,10 @@
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="./assets/church-logo.jpg" alt="Author avatar" />
+            <img
+              src="https://res.cloudinary.com/folafunmi/image/upload/v1601374890/Church%20faces/church-logo_bgtfdu.jpg"
+              alt="Author avatar"
+            />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
@@ -124,7 +144,10 @@
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="./assets/sis-ruth.jpg" alt="Author avatar" />
+            <img
+              src="https://res.cloudinary.com/folafunmi/image/upload/v1601374907/Church%20faces/sis-ruth_ewunvd.jpg"
+              alt="Author avatar"
+            />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
@@ -145,7 +168,10 @@
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="./assets/bro-deolu.jpg" alt="Author avatar" />
+            <img
+              src="https://res.cloudinary.com/folafunmi/image/upload/v1601374918/Church%20faces/bro-deolu_r2wmbv.jpg"
+              alt="Author avatar"
+            />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
@@ -166,7 +192,10 @@
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="./assets/sis-ope.jpeg" alt="Author avatar" />
+            <img
+              src="https://res.cloudinary.com/folafunmi/image/upload/v1601374892/Church%20faces/sis-ope_hnu2pm.jpg"
+              alt="Author avatar"
+            />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
@@ -187,7 +216,10 @@
 
         <div class="card-author">
           <a href="#" class="author-avatar">
-            <img src="./assets/fola.png" alt="Author avatar" />
+            <img
+              src="https://res.cloudinary.com/folafunmi/image/upload/v1601374904/Church%20faces/fola_ilvni0.png"
+              alt="Author avatar"
+            />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
