Updated README and changed favicon link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="https://res.cloudinary.com/folafunmi/image/upload/v1601374913/Church%20faces/favicon_at6elu.png"
+      href="./assets/favicon.png"
     />
   </head>
   <body>
