Added birthday illustration

--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The WordPlace Church Leaders</title>
     <link rel="stylesheet" href="card.css" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="./assets/favicon.png"
-    />
+    <link rel="icon" type="image/png" href="./assets/favicon.png" />
   </head>
   <body>
     <a href="#" class="church-logo">
@@ -232,6 +228,10 @@
         </div>
       </article>
     </section>
-    <footer>The WordPlace Church &reg;</footer>
+
+    <footer>
+        <img class="bday" src="./assets/undraw_having_fun_iais-removebg-preview.png" alt="Church logo" />
+      <p>The WordPlace Church &reg;</p>
+    </footer>
   </body>
 </html>
