--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
           <div class="author-name">
             <div class="author-name-prefix">Pastor</div>
-            Matthew Olaniyi
+            ...
           </div>
         </div>
       </article>
@@ -86,7 +86,7 @@
 
       <article class="card">
         <header class="card-header">
-          <p>May 25th 2020</p>
+          <p>June 28th</p>
           <h2>The WordPlace Church</h2>
         </header>
 
