Added correct birthday dates

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="card-list">
       <article class="card">
         <header class="card-header">
-          <p>Oct 23rd</p>
+          <p>23rd Oct</p>
           <h2>The WordPlace Church</h2>
         </header>
 
@@ -38,7 +38,7 @@
 
       <article class="card">
         <header class="card-header">
-          <p>Sept 1st</p>
+          <p>1st Sept</p>
           <h2>The WordPlace Church</h2>
         </header>
 
@@ -62,7 +62,7 @@
 
       <article class="card">
         <header class="card-header">
-          <p>Feb 27th</p>
+          <p>27th Feb</p>
           <h2>The WordPlace Church</h2>
         </header>
 
@@ -86,7 +86,7 @@
 
       <article class="card">
         <header class="card-header">
-          <p>June 28th</p>
+          <p>28th June</p>
           <h2>The WordPlace Church</h2>
         </header>
 
@@ -110,7 +110,7 @@
 
       <article class="card">
         <header class="card-header">
-          <p>May 25th 2020</p>
+          <p>23rd Nov</p>
           <h2>The WordPlace Church</h2>
         </header>
 
@@ -134,7 +134,7 @@
 
       <article class="card">
         <header class="card-header">
-          <p>May 25th 2020</p>
+          <p>2nd Oct</p>
           <h2>The WordPlace Church</h2>
         </header>
 
@@ -158,7 +158,7 @@
 
       <article class="card">
         <header class="card-header">
-          <p>May 25th 2020</p>
+          <p>20th Sept</p>
           <h2>The WordPlace Church</h2>
         </header>
 
@@ -182,7 +182,7 @@
 
       <article class="card">
         <header class="card-header">
-          <p>April 11th</p>
+          <p>11th April</p>
           <h2>The WordPlace Church</h2>
         </header>
 
@@ -206,7 +206,7 @@
 
       <article class="card">
         <header class="card-header">
-          <p>May 25th</p>
+          <p>25th May</p>
           <h2>The WordPlace Church</h2>
         </header>
 
