Changed Bro Dami's pic

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <a href="#" class="author-avatar">
             <img
               src="https://res.cloudinary.com/folafunmi/image/upload/v1601374905/Church%20faces/pastor_ol1lmh.jpg"
-              alt="Pastor's avatar"
+              alt="Pastor's pic"
             />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
@@ -46,7 +46,7 @@
           <a href="#" class="author-avatar">
             <img
               src="https://res.cloudinary.com/folafunmi/image/upload/v1601374890/Church%20faces/church-logo_bgtfdu.jpg"
-              alt="Author avatar"
+              alt="Sis Tolu's pic"
             />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
@@ -70,7 +70,7 @@
           <a href="#" class="author-avatar">
             <img
               src="https://res.cloudinary.com/folafunmi/image/upload/v1601374921/Church%20faces/bro-michael_fdbnvv.jpg"
-              alt="Author avatar"
+              alt="Bro Michael's pic"
             />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
@@ -94,7 +94,7 @@
           <a href="#" class="author-avatar">
             <img
               src="https://res.cloudinary.com/folafunmi/image/upload/v1601374897/Church%20faces/bro-salem_ubcgob.jpg"
-              alt="Author avatar"
+              alt="Bro Salem's pic"
             />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
@@ -117,8 +117,8 @@
         <div class="card-author">
           <a href="#" class="author-avatar">
             <img
-              src="https://res.cloudinary.com/folafunmi/image/upload/v1601374890/Church%20faces/church-logo_bgtfdu.jpg"
-              alt="Author avatar"
+              src="https://res.cloudinary.com/folafunmi/image/upload/v1601382958/Church%20faces/bro-dami_hpydep.jpg"
+              alt="Bro Dami's pic"
             />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
@@ -142,7 +142,7 @@
           <a href="#" class="author-avatar">
             <img
               src="https://res.cloudinary.com/folafunmi/image/upload/v1601374907/Church%20faces/sis-ruth_ewunvd.jpg"
-              alt="Author avatar"
+              alt="Sis Ruth's pic"
             />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
@@ -166,7 +166,7 @@
           <a href="#" class="author-avatar">
             <img
               src="https://res.cloudinary.com/folafunmi/image/upload/v1601374918/Church%20faces/bro-deolu_r2wmbv.jpg"
-              alt="Author avatar"
+              alt="Bro Deolu's pic"
             />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
@@ -190,7 +190,7 @@
           <a href="#" class="author-avatar">
             <img
               src="https://res.cloudinary.com/folafunmi/image/upload/v1601374892/Church%20faces/sis-ope_hnu2pm.jpg"
-              alt="Author avatar"
+              alt="Sis Ope's pic"
             />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
@@ -214,7 +214,7 @@
           <a href="#" class="author-avatar">
             <img
               src="https://res.cloudinary.com/folafunmi/image/upload/v1601374904/Church%20faces/fola_ilvni0.png"
-              alt="Author avatar"
+              alt="Fola's pic"
             />
           </a>
           <svg class="half-circle" viewBox="0 0 106 57">
